# kcanvas

./: .gitignore  CMakeLists.txt
examples/: 07strokestyles.cpp  CMakeLists.txt
include/kcanvas/: canvas.h
include/kcommon/: c_geometry.h  c_util.h
src/: CMakeLists.txt  canvasimpl.h
src/win/: canvasimpld2d.cpp
